# sale-inventory-reviewer

./: .gitignore  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt  run.bat  run.sh
.github/workflows/: ci.yml
data/: sku装箱数.xlsx  华润单品装箱数.xlsx
docs/: 运维操作手册.md
scripts/: check_xls_support_needed.py  generate_inventory_risk_report.py  health_check.py
scripts/core/: __init__.py  batch.py  column_detection.py  config.py  frame_columns.py  frame_schema.py  health_checks.py  io.py  matching.py  metrics.py  models.py  normalization.py  output_tables.py  pipeline.py  pipeline_inputs.py  pipeline_outputs.py  pipeline_sheets.py  pipeline_transfer.py  recommendations.py  report_content.py  report_styles.py  report_writer.py  system_rules.py
tasks/: todo.md
tests/: helpers.py  report_snapshot_helpers.py  test_batch_mode.py  test_config_validation.py  test_core_calculations.py  test_e2e_batch_snapshot.py  test_e2e_golden_snapshot.py  test_health_check.py
tests/snapshots/: golden_batch_summary_snapshot.json  golden_report_snapshot.json  golden_report_snapshot_peak.json  golden_report_snapshot_wumei.json
