[project]
name = "pseudoctor-sale-inventory-reviewer"
version = "1.1.0"
description = "Generate Excel inventory risk reports from sales and inventory snapshots."
requires-python = ">=3.11"

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
